--- a/gl3d/package.json
+++ b/gl3d/package.json
@@ -1,34 +1,18 @@
 {
   "dependencies": {
     "arraytools": "^1.0.0",
-    "colormap": "^1.3.1",
-    "delaunay-triangulate": "^1.1.6",
-    "gl-axes": "^5.0.3",
-    "gl-buffer": "^2.0.3",
-    "gl-error-bars": "^2.2.2",
-    "gl-line-plot": "^2.3.1",
-    "gl-matrix": "^2.2.1",
-    "gl-now": "^1.4.0",
-    "gl-scatter-plot": "^5.5.3",
-    "gl-select": "^2.0.0",
-    "gl-select-static": "^1.0.1",
-    "gl-simplicial-complex": "^1.2.2",
-    "gl-spikes": "^2.0.0",
-    "gl-surface-plot": "^5.2.2",
-    "ndarray": "^1.0.10",
-    "ndarray-fill": "^1.0.1",
-    "ndarray-pack": "^1.0.1",
-    "orbit-camera": "^1.0.0",
-    "tinycolor2": "^1.0.0",
     "browserify": "^6.1.0",
+    "colormap": "^1.3.1",
+    "gl-plot3d": "^1.0.1",
+    "tinycolor2": "^1.0.0",
     "uglify-js": "~2.4.13"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"NO TESTS TO RUN\" && exit 0",
     "build-dev": "./bin/browserify-build-3d.sh dev",
-    "build-prod": "./bin/browserify-build-3d.sh prod"
+    "build-prod": "./bin/browserify-build-3d.sh prod",
+    "watchify": "watchify --debug index.js --standalone SceneFrame -o ../shelly/shelly/static/js/plugins/glcontext-bundle.js"
   },
   "repository": {
     "type": "git",
