--- a/gl3d/package.json
+++ b/gl3d/package.json
@@ -5,9 +5,19 @@
     "colormap": "^1.3.1",
     "gl-plot3d": "^1.0.1",
     "tinycolor2": "^1.0.0",
-    "uglify-js": "~2.4.13"
+    "uglify-js": "~2.4.13",
+    "gl-error3d": "^1.0.0",
+    "gl-scatter3d": "^1.0.2",
+    "gl-surface3d": "^1.0.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "delaunay-triangulate": "^1.1.6",
+    "gl-line3d": "^1.0.0",
+    "gl-mesh3d": "^1.0.2",
+    "ndarray": "^1.0.16",
+    "ndarray-fill": "^1.0.1",
+    "watchify": "^3.1.0"
+  },
   "scripts": {
     "test": "echo \"NO TESTS TO RUN\" && exit 0",
     "build-dev": "./bin/browserify-build-3d.sh dev",
