--- a/gl3d/package.json
+++ b/gl3d/package.json
@@ -3,12 +3,12 @@
     "arraytools": "^1.0.0",
     "browserify": "^6.1.0",
     "colormap": "^1.3.1",
-    "gl-plot3d": "^1.0.1",
-    "tinycolor2": "^1.0.0",
-    "uglify-js": "~2.4.13",
     "gl-error3d": "^1.0.0",
+    "gl-plot3d": "^1.1.1",
     "gl-scatter3d": "^1.0.2",
-    "gl-surface3d": "^1.0.1"
+    "gl-surface3d": "^1.0.1",
+    "tinycolor2": "^1.0.0",
+    "uglify-js": "~2.4.13"
   },
   "devDependencies": {
     "delaunay-triangulate": "^1.1.6",
