--- a/gl3d/package.json
+++ b/gl3d/package.json
@@ -1,14 +1,19 @@
 {
   "dependencies": {
+    "3d-view": "^2.0.0",
     "arraytools": "^1.0.0",
     "browserify": "^6.1.0",
     "colormap": "^1.3.1",
     "gl-error3d": "^1.0.0",
     "gl-line3d": "^1.0.1",
+    "gl-mat4": "^1.1.2",
+    "gl-mesh3d": "^1.0.2",
     "gl-plot3d": "^1.1.1",
     "gl-scatter3d": "^1.0.2",
     "gl-surface3d": "^1.0.1",
-    "gl-mesh3d": "^1.0.2",
+    "mouse-change": "^1.1.1",
+    "mouse-wheel": "^1.0.2",
+    "right-now": "^1.0.0",
     "tinycolor2": "^1.0.0",
     "uglify-js": "~2.4.13"
   },
