--- a/shelly/plotlyjs/static/plotlyjs/package.json
+++ b/shelly/plotlyjs/static/plotlyjs/package.json
@@ -27,11 +27,11 @@
     "promise": "6.1.0",
     "right-now": "^1.0.0",
     "tinycolor2": "^1.0.0",
-    "uglify-js": "~2.4.13"
-  },
-  "devDependencies": {
+    "uglify-js": "~2.4.13",
     "delaunay-triangulate": "^1.1.6",
     "ndarray": "^1.0.16",
     "ndarray-fill": "^1.0.1"
+  },
+  "devDependencies": {
   }
 }
