pull ploticon font into js module as svg path on build

--- a/shelly/plotlyjs/static/plotlyjs/package.json
+++ b/shelly/plotlyjs/static/plotlyjs/package.json
@@ -30,7 +30,8 @@
     "uglify-js": "~2.4.13",
     "delaunay-triangulate": "^1.1.6",
     "ndarray": "^1.0.16",
-    "ndarray-fill": "^1.0.1"
+    "ndarray-fill": "^1.0.1",
+    "xml2js": "^0.4.8"
   },
   "devDependencies": {
   }
