--- a/shelly/plotlyjs/static/plotlyjs/package.json
+++ b/shelly/plotlyjs/static/plotlyjs/package.json
@@ -31,7 +31,8 @@
     "delaunay-triangulate": "^1.1.6",
     "ndarray": "^1.0.16",
     "ndarray-fill": "^1.0.1",
-    "xml2js": "0.4.8"
+    "xml2js": "0.4.8",
+    "object-assign": "2.0.0"
   },
   "devDependencies": {
   }
