--- a/shelly/plotlyjs/static/plotlyjs/package.json
+++ b/shelly/plotlyjs/static/plotlyjs/package.json
@@ -10,9 +10,11 @@
   "private": true,
   "dependencies": {
     "3d-view": "^2.0.0",
+    "alpha-shape": "^1.0.0",
     "arraytools": "^1.0.0",
     "browserify": "^6.1.0",
     "colormap": "^1.3.1",
+    "convex-hull": "^1.0.3",
     "delaunay-triangulate": "^1.1.6",
     "gl-error3d": "^1.0.0",
     "gl-line3d": "^1.0.1",
