graph reference cli builder (first attempt)

--- a/shelly/plotlyjs/static/plotlyjs/package.json
+++ b/shelly/plotlyjs/static/plotlyjs/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "plotly.js library",
   "repository": "",
-  "main": "src/plotly.js",
-  "scripts": {},
+  "main": "index.html",
+  "scripts": {
+    "build-graph-reference": "/usr/local/nwjs-v0.12.0-linux-x64/nw ."
+  },
   "author": "Plotly amazing team",
   "license": "ISC",
   "private": true,
