--- a/shelly/plotlyjs/static/plotlyjs/package.json
+++ b/shelly/plotlyjs/static/plotlyjs/package.json
@@ -16,6 +16,7 @@
     "colormap": "^1.3.1",
     "convex-hull": "^1.0.3",
     "delaunay-triangulate": "^1.1.6",
+    "extend": "^3.0.0",
     "gl-error3d": "^1.0.0",
     "gl-line3d": "^1.0.1",
     "gl-mat4": "^1.1.2",
@@ -34,9 +35,9 @@
     "right-now": "^1.0.0",
     "superscript-text": "^1.0.0",
     "tinycolor2": "1.1.2",
+    "topojson": "1.6.19",
     "uglify-js": "~2.4.13",
-    "xml2js": "0.4.8",
-    "topojson": "1.6.19"
+    "xml2js": "0.4.8"
   },
   "devDependencies": {}
 }
