rm browserify transfrom from package.json, add it to build scripts

--- a/shelly/plotlyjs/static/plotlyjs/package.json
+++ b/shelly/plotlyjs/static/plotlyjs/package.json
@@ -40,6 +40,5 @@
     "uglify-js": "~2.4.13",
     "xml2js": "0.4.8"
   },
-  "devDependencies": {},
-  "browserify": { "transform": [ "./compress_attributes" ] }
+  "devDependencies": {}
 }
