--- a/shelly/plotlyjs/static/plotlyjs/package.json
+++ b/shelly/plotlyjs/static/plotlyjs/package.json
@@ -12,6 +12,7 @@
     "alpha-shape": "^1.0.0",
     "arraytools": "^1.0.0",
     "browserify": "^6.1.0",
+    "clone": "^1.0.2",
     "colormap": "^1.3.1",
     "convex-hull": "^1.0.3",
     "delaunay-triangulate": "^1.1.6",
