--- a/shelly/plotlyjs/static/plotlyjs/package.json
+++ b/shelly/plotlyjs/static/plotlyjs/package.json
@@ -22,7 +22,9 @@
     "gl-mesh3d": "^1.0.4",
     "gl-plot2d": "^1.0.0",
     "gl-plot3d": "^1.3.0",
+    "gl-scatter2d": "^1.0.1",
     "gl-scatter3d": "^1.0.4",
+    "gl-spikes2d": "^1.0.0",
     "gl-surface3d": "^1.0.6",
     "mouse-change": "^1.1.1",
     "mouse-wheel": "^1.0.2",
@@ -33,6 +35,7 @@
     "object-assign": "2.0.0",
     "promise": "6.1.0",
     "right-now": "^1.0.0",
+    "robust-orientation": "^1.1.3",
     "superscript-text": "^1.0.0",
     "through2": "^2.0.0",
     "tinycolor2": "1.1.2",
