--- a/shelly/plotlyjs/static/plotlyjs/package.json
+++ b/shelly/plotlyjs/static/plotlyjs/package.json
@@ -17,14 +17,15 @@
     "delaunay-triangulate": "^1.1.6",
     "extend": "^3.0.0",
     "gl-error3d": "^1.0.0",
+    "gl-line2d": "^1.0.1",
     "gl-line3d": "^1.0.1",
     "gl-mat4": "^1.1.2",
     "gl-mesh3d": "^1.0.4",
-    "gl-plot2d": "^1.0.0",
+    "gl-plot2d": "^1.0.1",
     "gl-plot3d": "^1.3.0",
     "gl-scatter2d": "^1.0.1",
     "gl-scatter3d": "^1.0.4",
-    "gl-spikes2d": "^1.0.0",
+    "gl-spikes2d": "^1.0.1",
     "gl-surface3d": "^1.0.6",
     "mouse-change": "^1.1.1",
     "mouse-wheel": "^1.0.2",
