--- a/shelly/plotlyjs/static/plotlyjs/package.json
+++ b/shelly/plotlyjs/static/plotlyjs/package.json
@@ -21,10 +21,11 @@
     "gl-line3d": "^1.0.1",
     "gl-mat4": "^1.1.2",
     "gl-mesh3d": "^1.0.4",
-    "gl-plot2d": "^1.0.1",
+    "gl-plot2d": "^1.0.2",
     "gl-plot3d": "^1.3.0",
     "gl-scatter2d": "^1.0.1",
     "gl-scatter3d": "^1.0.4",
+    "gl-select-box": "^1.0.1",
     "gl-spikes2d": "^1.0.1",
     "gl-surface3d": "^1.0.6",
     "mouse-change": "^1.1.1",
