--- a/shelly/plotlyjs/static/plotlyjs/package.json
+++ b/shelly/plotlyjs/static/plotlyjs/package.json
@@ -16,6 +16,7 @@
     "convex-hull": "^1.0.3",
     "delaunay-triangulate": "^1.1.6",
     "extend": "^3.0.0",
+    "gl-error2d": "^1.0.0",
     "gl-error3d": "^1.0.0",
     "gl-line2d": "^1.0.1",
     "gl-line3d": "^1.0.1",
@@ -24,6 +25,7 @@
     "gl-plot2d": "^1.0.2",
     "gl-plot3d": "^1.3.0",
     "gl-scatter2d": "^1.0.1",
+    "gl-scatter2d-fancy": "^1.0.0",
     "gl-scatter3d": "^1.0.4",
     "gl-select-box": "^1.0.1",
     "gl-spikes2d": "^1.0.1",
