require es6-polyfill throughout app

--- a/shelly/plotlyjs/static/plotlyjs/package.json
+++ b/shelly/plotlyjs/static/plotlyjs/package.json
@@ -15,6 +15,7 @@
     "convex-hull": "^1.0.3",
     "d3": "3.3.5",
     "delaunay-triangulate": "^1.1.6",
+    "es6-promise": "^3.0.2",
     "gl-error3d": "^1.0.0",
     "gl-line3d": "^1.0.1",
     "gl-mat4": "^1.1.2",
