--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "d3": "3.5.6",
     "delaunay-triangulate": "^1.1.6",
     "es6-promise": "^3.0.2",
+    "fast-isnumeric": "^1.1.1",
     "gl-error2d": "^1.0.0",
     "gl-error3d": "^1.0.0",
     "gl-line2d": "^1.2.1",
