--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "build": "npm run preprocess && npm run bundle",
     "watch": "node tasks/watch_plotly.js",
     "test-jasmine": "karma start test/jasmine/karma.conf.js",
-    "test-image": "echo TODO",
+    "test-image": "node test/image/compare_pixel_test.js",
     "test": "npm run test-jasmine && npm test-image",
     "start-test_dashboard": "node devtools/test_dashboard/server.js",
     "start-image_viewer": "node devtools/image_viewer/server.js"
