--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "node-sass": "^3.4.1",
     "right-now": "^1.0.0",
     "robust-orientation": "^1.1.3",
+    "sane-topojson": "^1.2.0",
     "superscript-text": "^1.0.0",
     "through2": "^2.0.0",
     "tinycolor2": "1.1.2",
