add jshint devDep and 'run lint' script

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "bundle": "node tasks/bundle.js",
     "build": "npm run preprocess && npm run bundle",
     "watch": "node tasks/watch_plotly.js",
+    "lint": "cd src && jshint . || true",
     "test-jasmine": "karma start test/jasmine/karma.conf.js",
     "test-image": "echo TODO",
     "test": "npm run test-jasmine && npm test-image",
@@ -98,6 +99,7 @@
     "browserify-transform-tools": "^1.5.0",
     "ecstatic": "^1.2.0",
     "jasmine-core": "^2.3.4",
+    "jshint": "^2.8.0",
     "karma": "^0.13.15",
     "karma-browserify": "^4.4.0",
     "karma-chrome-launcher": "^0.2.1",
