tmp commit git diff --cached!

--- a/package.json
+++ b/package.json
@@ -49,10 +49,11 @@
     "watch": "node tasks/watch_plotly.js",
     "lint": "cd src && jshint . || true",
     "test-jasmine": "karma start test/jasmine/karma.conf.js",
-    "test-image": "node test/image/compare_pixels_test.js",
+    "test-image": "./tasks/test_image.sh",
     "test": "npm run test-jasmine && npm test-image",
     "start-test_dashboard": "node devtools/test_dashboard/server.js",
-    "start-image_viewer": "node devtools/image_viewer/server.js"
+    "start-image_viewer": "node devtools/image_viewer/server.js",
+    "make-baseline": "./tasks/make_baseline.sh"
   },
   "dependencies": {
     "3d-view": "^2.0.0",
