add make baseline script

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "test": "npm run test-jasmine && npm test-image",
     "start-test_dashboard": "node devtools/test_dashboard/server.js",
     "start-image_viewer": "node devtools/image_viewer/server.js",
-    "make-baseline": "./tasks/make_baseline.sh"
+    "baseline": "./tasks/baseline.sh"
   },
   "dependencies": {
     "3d-view": "^2.0.0",
