--- a/circle.yml
+++ b/circle.yml
@@ -14,4 +14,4 @@ dependencies:
 test:
   override:
     - docker run -d --name myimageserver -v $PWD:/var/www/streambed/image_server/plotly.js -p 9010:9010 plotly/imageserver:0.2.1; sleep 10
-    - docker exec -i myimageserver /bin/bash -c "cd /var/www/streambed/image_server/plotly.js && node test/image/compare_pixels_test.js"
+    - sudo lxc-attach -n "$(docker inspect --format '{{.Id}}' myimageserver)" -- bash -c "cd /var/www/streambed/image_server/plotly.js && node test/image/compare_pixels_test.js"
