cp test/image index.html to image server

--- a/circle.yml
+++ b/circle.yml
@@ -22,5 +22,5 @@ dependencies:
 test:
   override:
     - docker run -d --name myimageserver -v $PWD:/var/www/streambed/image_server/plotly.js -p 9010:9010 plotly/imageserver:0.2.0; sleep 20
-    - sudo lxc-attach -n "$(docker inspect --format '{{.Id}}' myimageserver)" -- bash -c "cd /var/www/streambed/image_server/plotly.js && node test/image/compare_pixels_test.js"
+    - sudo lxc-attach -n "$(docker inspect --format '{{.Id}}' myimageserver)" -- bash -c "cd /var/www/streambed/image_server/plotly.js && cp -f test/image/index.html ../server_app/index.html && node test/image/compare_pixels_test.js"
     - npm run citest-jasmine
