minor docs styling:
- README trailing '/'
- 'Plotly, Inc' not 'Plotly Inc' in package.json

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "bugs": {
     "url": "https://github.com/plotly/plotly.js/issues"
   },
-  "author": "Plotly Inc.",
+  "author": "Plotly, Inc.",
   "keywords": [
     "graphing",
     "plotting",
