Update Ploticon Font and Config with Question icon

--- a/src/fonts/ploticon/config.json
+++ b/src/fonts/ploticon/config.json
@@ -1469,6 +1469,12 @@
       "src": "fontawesome"
     },
     {
+      "uid": "17ebadd1e3f274ff0205601eef7b9cc4",
+      "css": "question",
+      "code": 59407,
+      "src": "fontawesome"
+    },
+    {
       "uid": "d7271d490b71df4311e32cdacae8b331",
       "css": "home",
       "code": 59393,
@@ -1478,6 +1484,12 @@
       "uid": "f9c3205df26e7778abac86183aefdc99",
       "css": "undo",
       "code": 59392,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "f4445feb55521283572ee88bc304f928",
+      "css": "disk",
+      "code": 59408,
       "src": "fontawesome"
     }
   ]
