--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "preprocess": "node tasks/preprocess.js",
     "postinstall": "npm run preprocess",
     "bundle": "node tasks/bundle.js",
-    "build": "npm run preprocess && npm run bundle",
+    "header": "node tasks/header.js",
+    "build": "npm run preprocess && npm run bundle && npm run header",
     "cibuild": "node tasks/cibundle.js",
     "watch": "node tasks/watch_plotly.js",
     "lint": "cd src && jshint . || true",
@@ -90,9 +91,10 @@
     "karma-firefox-launcher": "^0.1.6",
     "karma-jasmine": "^0.3.6",
     "open": "0.0.5",
+    "prepend-file": "^1.3.0",
     "prettysize": "0.0.3",
     "through2": "^2.0.0",
-    "watchify": "^3.6.0",
-    "uglify-js": "^2.5.0"
+    "uglify-js": "^2.5.0",
+    "watchify": "^3.6.0"
   }
 }
