--- a/circle.yml
+++ b/circle.yml
@@ -12,10 +12,10 @@ machine:
 
 dependencies:
   pre:
-    - docker pull plotly/imageserver:candidate
+    - docker pull plotly/imageserver:latest
   post:
     - npm run cibuild
-    - docker run -d --name myimageserver -v $PWD:/var/www/streambed/image_server/plotly.js -p 9010:9010 plotly/imageserver:candidate
+    - docker run -d --name myimageserver -v $PWD:/var/www/streambed/image_server/plotly.js -p 9010:9010 plotly/imageserver:latest
     - wget --server-response --spider --tries=8 --retry-connrefused http://localhost:9010/ping
 test:
   override:
