--- a/package.json
+++ b/package.json
@@ -83,6 +83,8 @@
     "browserify": "^12.0.1",
     "browserify-transform-tools": "^1.5.0",
     "ecstatic": "^1.2.0",
+    "falafel": "^1.2.0",
+    "glob": "^6.0.1",
     "jasmine-core": "^2.3.4",
     "jshint": "^2.8.0",
     "karma": "^0.13.15",
