--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "test-jasmine": "karma start test/jasmine/karma.conf.js",
     "citest-jasmine": "karma start test/jasmine/karma.ciconf.js",
     "test-image": "./tasks/test_image.sh",
+    "test-syntax": "node test/syntax_test.js",
     "test": "npm run test-jasmine && npm test-image",
     "start-test_dashboard": "node devtools/test_dashboard/server.js",
     "start-image_viewer": "node devtools/image_viewer/server.js",
@@ -63,6 +64,7 @@
     "gl-select-box": "^1.0.1",
     "gl-spikes2d": "^1.0.1",
     "gl-surface3d": "^1.0.6",
+    "glob": "^6.0.1",
     "mouse-change": "^1.1.1",
     "mouse-wheel": "^1.0.2",
     "ndarray": "^1.0.16",
