--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "d3": "3.5.6",
     "delaunay-triangulate": "^1.1.6",
     "es6-promise": "^3.0.2",
+    "eslint": "^1.10.3",
     "fast-isnumeric": "^1.1.1",
     "fs-extra": "^0.26.2",
     "gl-error2d": "^1.0.0",
