git add src files during npm version task

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "start-test_dashboard": "node devtools/test_dashboard/server.js",
     "start-image_viewer": "node devtools/image_viewer/server.js",
     "baseline": "./tasks/baseline.sh",
-    "version": "npm run build && git add -A dist",
+    "version": "npm run build && git add -A dist src",
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
