--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "robust-orientation": "^1.1.3",
     "sane-topojson": "^1.2.0",
     "superscript-text": "^1.0.0",
-    "tinycolor2": "1.1.2",
+    "tinycolor2": "^1.3.0",
     "topojson": "^1.6.19"
   },
   "devDependencies": {
