--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "citest-jasmine": "karma start test/jasmine/karma.ciconf.js",
     "test-image": "./tasks/test_image.sh",
     "test-syntax": "node test/syntax_test.js",
-    "test": "npm run test-jasmine && npm test-image",
+    "test": "npm run test-jasmine && npm test-image && npm test-syntax",
     "start-test_dashboard": "node devtools/test_dashboard/server.js",
     "start-image_viewer": "node devtools/image_viewer/server.js",
     "baseline": "./tasks/baseline.sh",
