--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.4.1",
   "description": "The open source javascript graphing library that powers plotly",
   "license": "MIT",
-  "main": "./src/index.js",
-  "webpack": "./dist/plotly.min.js",
+  "main": "./lib/index.js",
+  "webpack": "./dist/plotly.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/plotly/plotly.js.git"
