--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "citest-jasmine": "karma start test/jasmine/karma.ciconf.js",
     "test-image": "./tasks/test_image.sh",
     "test-syntax": "node test/syntax_test.js",
+    "test-bundle": "node tasks/test_bundle.js",
     "test": "npm run test-jasmine && npm test-image",
     "start-test_dashboard": "node devtools/test_dashboard/server.js",
     "start-image_viewer": "node devtools/image_viewer/server.js",
