--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -3,6 +3,10 @@
   "env": {
     "browser": true
   },
+  "globals": {
+    "Promise": true,
+    "Uint8Array": true
+  },
   "rules": {
     "strict": [2, "global"]
   }
