--- a/.eslintrc
+++ b/.eslintrc
@@ -35,6 +35,8 @@
     "no-unused-vars": [2],
     "no-use-before-define": [2, "nofunc"],
     "no-loop-func": [2],
-    "no-console": [0]
+    "no-console": [0],
+    "no-unexpected-multiline": [2],
+    "no-unused-labels": [2]
   },
 }
