--- a/.eslintrc
+++ b/.eslintrc
@@ -30,6 +30,7 @@
     "no-spaced-func": [2],
     "space-in-parens": [2, "never"],
     "space-before-function-paren": [2, "never"],
+    "space-before-blocks": [2],
     "no-multi-spaces": [2],
     "space-infix-ops": [0, {"int32Hint": false}],
     "quotes": [2, "single"],
