--- a/circle.yml
+++ b/circle.yml
@@ -20,6 +20,7 @@ dependencies:
 test:
   override:
     - sudo lxc-attach -n "$(docker inspect --format '{{.Id}}' mytestbed)" -- bash -c "cd /var/www/streambed/image_server/plotly.js && node test/image/compare_pixels_test.js"
+    - sudo lxc-attach -n "$(docker inspect --format '{{.Id}}' mytestbed)" -- bash -c "cd /var/www/streambed/image_server/plotly.js && node test/image/export_test.js"
     - npm run citest-jasmine
     - npm run test-bundle
     - npm run test-syntax
