--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "test-jasmine": "karma start test/jasmine/karma.conf.js",
     "citest-jasmine": "karma start test/jasmine/karma.ciconf.js",
     "test-image": "./tasks/test_image.sh",
+    "test-export": "./tasks/test_export.sh",
     "test-syntax": "node test/syntax_test.js",
     "test-bundle": "node tasks/test_bundle.js",
     "test": "npm run citest-jasmine && npm run test-image && npm run test-syntax && npm run test-bundle",
