list two already enforced rules:
- no-whitespace-before-property
- operator-linebreak

--- a/.eslintrc
+++ b/.eslintrc
@@ -32,9 +32,12 @@
     "space-before-function-paren": [2, "never"],
     "space-before-blocks": [2],
     "no-multi-spaces": [2],
+    "no-whitespace-before-property": [2],
+    "no-unexpected-multiline": [2],
     "space-infix-ops": [0, {"int32Hint": false}],
     "quotes": [2, "single"],
     "dot-notation": [2, {"allowKeywords": false}],
+    "operator-linebreak": [2, "after"],
     "eqeqeq": [2],
     "new-cap": [0],
     "no-redeclare": [2, {"builtinGlobals": true}],
@@ -44,7 +47,6 @@
     "no-use-before-define": [2, "nofunc"],
     "no-loop-func": [2],
     "no-console": [0],
-    "no-unexpected-multiline": [2],
     "no-unused-labels": [2]
   },
 }
