--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "preprocess": "node tasks/preprocess.js",
     "bundle": "node tasks/bundle.js",
     "header": "node tasks/header.js",
-    "build": "npm dedupe && npm run preprocess && npm run bundle && npm run header",
+    "build": "npm run preprocess && npm run bundle && npm run header",
     "cibuild": "node tasks/cibundle.js",
     "watch": "node tasks/watch_plotly.js",
     "lint": "eslint . || true",
@@ -38,6 +38,7 @@
     "start-test_dashboard": "node devtools/test_dashboard/server.js",
     "start-image_viewer": "node devtools/image_viewer/server.js",
     "baseline": "./tasks/baseline.sh",
+    "preversion": "npm-link-check && npm dedupe",
     "version": "npm run build && git add -A dist src build",
     "postversion": "git push && git push --tags"
   },
@@ -94,6 +95,7 @@
     "karma-firefox-launcher": "^0.1.6",
     "karma-jasmine": "^0.3.6",
     "node-sass": "^3.4.1",
+    "npm-link-check": "^1.1.0",
     "open": "0.0.5",
     "prepend-file": "^1.3.0",
     "prettysize": "0.0.3",
