--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "test-syntax": "node test/syntax_test.js",
     "test-bundle": "node tasks/test_bundle.js",
     "test": "npm run citest-jasmine && npm run test-image && npm run test-syntax && npm run test-bundle",
-    "start-test_dashboard": "node devtools/test_dashboard/server.js",
+    "start": "node devtools/test_dashboard/server.js",
+    "start-test_dashboard": "npm start",
     "start-image_viewer": "node devtools/image_viewer/server.js",
     "baseline": "./tasks/baseline.sh",
     "preversion": "npm-link-check && npm dedupe",
