fix linter errors

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cibuild": "node tasks/cibundle.js",
     "watch": "node tasks/watch_plotly.js",
     "lint": "eslint . || true",
+    "lint-fix": "eslint . --fix",
     "test-jasmine": "karma start test/jasmine/karma.conf.js",
     "citest-jasmine": "karma start test/jasmine/karma.ciconf.js",
     "test-image": "./tasks/test_image.sh",
@@ -85,7 +86,7 @@
     "browserify": "^13.0.0",
     "browserify-transform-tools": "^1.5.1",
     "ecstatic": "^1.4.0",
-    "eslint": "^2.1.0",
+    "eslint": "^2.8.0",
     "falafel": "^1.2.0",
     "fs-extra": "^0.27.0",
     "fuse.js": "^2.2.0",
