--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,8 @@
 
 dev:
   container_name: imagetest
-  image: plotly/testbed:latest
+  image: plotly/image_server:latest
   volumes: 
     - .:/var/www/streambed/image_server/plotly.js
   ports:
     - "9010:9010"
-    - "2022:22"
