--- a/circle.yml
+++ b/circle.yml
@@ -16,6 +16,8 @@ dependencies:
   post:
     - npm run cibuild
     - docker run -d --name mytestbed -v $PWD:/var/www/streambed/image_server/plotly.js -p 9010:9010 plotly/testbed:candidate
+    - sudo lxc-attach -n "$(docker inspect --format '{{.Id}}' mytestbed)" -- bash -c "/nw_restart.sh"
+    - wget --server-response --spider --tries=8 --retry-connrefused http://localhost:9010/ping
 test:
   override:
     - sudo lxc-attach -n "$(docker inspect --format '{{.Id}}' mytestbed)" -- bash -c "cd /var/www/streambed/image_server/plotly.js && node test/image/compare_pixels_test.js"
